--- a/Combee/Users.xaml
+++ b/Combee/Users.xaml
@@ -31,15 +31,15 @@
         <DataTemplate x:Key="UmsgListTemplate">
             <StackPanel Name="AllUmsgStackPanel" Orientation="Horizontal" Margin="12,2,0,4" Height="105" Background="#FF51697A">
                 <!--用图像替换矩形-->
-                <Image Name="UserImage" Tag="{Binding AuthorId}" Source="{Binding DisplayAvatar, Converter={StaticResource StringToImageSource}}" Width="90" Height="90" Margin="9,0,0,0" Tap="UserImage_Tap" Stretch="Uniform"/>
+                <Image Name="UserImage" Tag="{Binding AuthorId, Mode=OneWay}" Source="{Binding DisplayAvatar, Converter={StaticResource StringToImageSource}, Mode=OneWay}" Width="90" Height="90" Margin="9,0,0,0" Tap="UserImage_Tap" Stretch="Uniform"/>
                 <StackPanel Name="FullUmsgStackPanel" Tag="{Binding Id}" Width="311" Margin="8,-7,0,0" Tap="fullUmsgStackPanel_Tap">
                     <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
-                        <TextBlock Name="UserNameTextBlock" Text="{Binding AuthorName}" TextWrapping="NoWrap" Style="{StaticResource PhoneTextExtraLargeStyle}" FontSize="{StaticResource PhoneFontSizeLarge}" />
+                        <TextBlock Name="UserNameTextBlock" Text="{Binding AuthorName, Mode=OneWay}" TextWrapping="NoWrap" Style="{StaticResource PhoneTextExtraLargeStyle}" FontSize="{StaticResource PhoneFontSizeLarge}" />
                         <Border Visibility="Collapsed" BorderThickness="1" Width="24" Height="24" Margin="0,4,0,0" BorderBrush="#FFFFC700" Background="White" />
                     </StackPanel>
-                    <TextBlock Name="TimeTextBlock" Text="{Binding DisplayTime}" TextWrapping="NoWrap" Margin="0,-40,5,0" FontSize="{StaticResource PhoneFontSizeMedium}" HorizontalAlignment="Right" />
-                    <TextBlock Name="TitleTextBlock" Text="{Binding Title}" TextWrapping="NoWrap" Margin="10,4,0,0"  Height="25" />
-                    <TextBlock Name="ContentTextBlock" Text="{Binding Body}" TextWrapping="Wrap" Margin="10,4,0,0" Style="{StaticResource PhoneTextSubtleStyle}" Height="28" />
+                    <TextBlock Name="TimeTextBlock" Text="{Binding DisplayTime, Mode=OneWay}" TextWrapping="NoWrap" Margin="0,-40,5,0" FontSize="{StaticResource PhoneFontSizeMedium}" HorizontalAlignment="Right" />
+                    <TextBlock Name="TitleTextBlock" Text="{Binding Title, Mode=OneWay}" TextWrapping="NoWrap" Margin="10,4,0,0"  Height="25" />
+                    <TextBlock Name="ContentTextBlock" Text="{Binding Body, Mode=OneWay}" TextWrapping="Wrap" Margin="10,4,0,0" Style="{StaticResource PhoneTextSubtleStyle}" Height="28" />
                 </StackPanel>
             </StackPanel>
         </DataTemplate>
@@ -48,12 +48,12 @@
         <DataTemplate x:Key="OrgzListTemplate">
             <StackPanel Orientation="Horizontal" Margin="12,2,0,4" Height="105" Background="#FF51697A">
                 <!--用图像替换矩形-->
-                <Image Name="OrgzImage" Source="{Binding DisplayAvatar}" Width="90" Height="90" Margin="9,0,0,0" Stretch="UniformToFill"/>
+                <Image Name="OrgzImage" Source="{Binding DisplayAvatar, Mode=OneWay}" Width="90" Height="90" Margin="9,0,0,0" Stretch="UniformToFill"/>
                 <StackPanel Width="311" Margin="8,-2,0,0">
-                    <TextBlock Text="{Binding Name}" TextWrapping="Wrap" Margin="10,10,0,0" Style="{StaticResource PhoneTextExtraLargeStyle}" FontSize="{StaticResource PhoneFontSizeLarge}" />
+                    <TextBlock Text="{Binding Name, Mode=OneWay}" TextWrapping="Wrap" Margin="10,10,0,0" Style="{StaticResource PhoneTextExtraLargeStyle}" FontSize="{StaticResource PhoneFontSizeLarge}" />
                     <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="{Binding Members, StringFormat='\{0}人 '}" TextWrapping="Wrap" Margin="10,10,0,0" Style="{StaticResource PhoneTextSubtleStyle}" FontSize="{StaticResource PhoneFontSizeNormal}" />
-                        <TextBlock Text="{Binding Bio}" TextWrapping="Wrap" Margin="10,10,0,0" Style="{StaticResource PhoneTextSubtleStyle}" FontSize="{StaticResource PhoneFontSizeNormal}" />
+                        <TextBlock Text="{Binding Members, StringFormat='\{0}人 ', Mode=OneWay}" TextWrapping="Wrap" Margin="10,10,0,0" Style="{StaticResource PhoneTextSubtleStyle}" FontSize="{StaticResource PhoneFontSizeNormal}" />
+                        <TextBlock Text="{Binding Bio, Mode=OneWay}" TextWrapping="Wrap" Margin="10,10,0,0" Style="{StaticResource PhoneTextSubtleStyle}" FontSize="{StaticResource PhoneFontSizeNormal}" />
                     </StackPanel>
                 </StackPanel>
             </StackPanel>
@@ -92,14 +92,14 @@
             <!--枢轴项二-->
             <phone:PivotItem Header="优信">
                 <Grid Margin="0,20,20,0">
-                    <phone:LongListSelector ItemsSource="{Binding ReceiptsItems}" ItemTemplate="{StaticResource UmsgListTemplate}" Margin="0,-38,-22,2"/>
+                    <phone:LongListSelector ItemsSource="{Binding ReceiptsItems, Mode=OneWay}" ItemTemplate="{StaticResource UmsgListTemplate}" Margin="0,-38,-22,2"/>
                 </Grid>
             </phone:PivotItem>
 
             <!--枢轴项三-->
             <phone:PivotItem Header="组织">
                 <Grid Margin="0,20,20,0">
-                    <phone:LongListSelector ItemsSource="{Binding OrganizationsItems}" ItemTemplate="{StaticResource OrgzListTemplate}" Margin="0,-38,-22,2"/>
+                    <phone:LongListSelector ItemsSource="{Binding OrganizationsItems, Mode=OneWay}" ItemTemplate="{StaticResource OrgzListTemplate}" Margin="0,-38,-22,2"/>
                 </Grid>
             </phone:PivotItem>
         </phone:Pivot>
