--- a/Combee/MainPage.xaml
+++ b/Combee/MainPage.xaml
@@ -22,28 +22,34 @@
 
         <!--优信列表控件模版-->
         <DataTemplate x:Key="UmsgListTemplate">
-            <StackPanel Name="AllUmsgStackPanel" Orientation="Horizontal" Margin="12,2,0,4" Height="105" Background="#FF51697A">
-                <Image Name="UserImage" Tag="{Binding AuthorId, Mode=OneWay}" Source="{Binding DisplayAvatar, Converter={StaticResource StringToImageSource}, Mode=OneWay}" Width="90" Height="90" Margin="9,0,0,0" Tap="UserImage_Tap" Stretch="UniformToFill"/>
-                <StackPanel Name="FullUmsgStackPanel" Tag="{Binding PostId, Mode=OneWay}" Width="311" Margin="8,-7,0,0" Tap="fullUmsgStackPanel_Tap" IsHitTestVisible="True">
-                    <StackPanel Orientation="Horizontal" Margin="0,5,0,0" IsHitTestVisible="True">
-                        <TextBlock Name="UserNameTextBlock" Text="{Binding AuthorName, Mode=OneWay}" TextWrapping="NoWrap" Style="{StaticResource PhoneTextExtraLargeStyle}" FontSize="{StaticResource PhoneFontSizeLarge}" IsHitTestVisible="True" />
-                        <Border Visibility="Collapsed" BorderThickness="1" Width="24" Height="24" Margin="0,4,0,0" BorderBrush="#FFFFC700" Background="White" IsHitTestVisible="True" />
+            <StackPanel Orientation="Horizontal" Margin="12,2,0,4" Background="#FF51697A">
+                <StackPanel Orientation="Horizontal">
+                    <Image Tag="{Binding AuthorId, Mode=OneWay}" Source="{Binding DisplayAvatar, Converter={StaticResource StringToImageSource}, Mode=OneWay}" Width="90" Height="90" Margin="9,0,0,0" Tap="UserImage_Tap" Stretch="UniformToFill"/>
+                    <StackPanel>
+                        <TextBlock Text="{Binding Title, Mode=OneWay}" TextWrapping="NoWrap"  Margin="10,4,0,0" TextTrimming="WordEllipsis"  FontFamily="Microsoft YaHei" FontSize="20"/>
+                        <Grid>
+                            <TextBlock Text="{Binding AuthorName, Mode=OneWay}" TextWrapping="NoWrap" Style="{StaticResource PhoneTextExtraLargeStyle}" FontSize="{StaticResource PhoneFontSizeSmall}" />
+                            <TextBlock Text="{Binding CreatedAt, Converter={StaticResource DisplayTime}, Mode=OneWay}" TextWrapping="NoWrap" FontSize="{StaticResource PhoneFontSizeSmall}" HorizontalAlignment="Right" FontFamily="Portable User Interface"  />
+                                
+                        </Grid>
                     </StackPanel>
-                    <TextBlock Name="TimeTextBlock" Text="{Binding CreatedAt, Converter={StaticResource DisplayTime}, Mode=OneWay}" TextWrapping="NoWrap" Margin="0,-32,8,0" FontSize="{StaticResource PhoneFontSizeMedium}" HorizontalAlignment="Right" FontFamily="Portable User Interface" IsHitTestVisible="True" />
-                    <TextBlock Name="TitleTextBlock" Text="{Binding Title, Mode=OneWay}" TextWrapping="Wrap" Margin="10,4,0,0"  Height="25" TextTrimming="None" FontFamily="Portable User Interface" IsHitTestVisible="True" />
-                    <TextBlock Name="ContentTextBlock" Text="{Binding Body, Mode=OneWay}" TextWrapping="NoWrap" Margin="10,4,5,0" Style="{StaticResource PhoneTextSubtleStyle}" Height="28" TextTrimming="WordEllipsis" IsHitTestVisible="True" />
+                </StackPanel>
+                <StackPanel Tag="{Binding PostId, Mode=OneWay}" Width="311" Margin="8,-7,0,0" Tap="ReceiptStackPanel_Tap" >
+                    <StackPanel Orientation="Horizontal" Margin="0,5,0,0" >
+                    </StackPanel>
+                    <TextBlock Text="{Binding Body, Mode=OneWay}" TextWrapping="NoWrap" Margin="10,4,5,0" Style="{StaticResource PhoneTextSubtleStyle}" Height="28" TextTrimming="WordEllipsis"  />
                 </StackPanel>
             </StackPanel>
         </DataTemplate>
         <!--组织列表控件模版-->
         <DataTemplate x:Key="OrgzListTemplate">
             <StackPanel Orientation="Horizontal" Tag="{Binding Id, Mode=OneWay}" Margin="12,2,0,4" Height="105" Background="#FF51697A" Tap="StackPanel_Tap">
-                <Image Name="OrgzImage" Source="{Binding DisplayAvatar, Converter={StaticResource StringToImageSource}, Mode=OneWay}" Width="90" Height="90" Margin="9,0,0,0" Stretch="UniformToFill" IsHitTestVisible="True"/>
-                <StackPanel Width="311" Margin="8,-2,0,0" IsHitTestVisible="True">
-                    <TextBlock Text="{Binding Name, Mode=OneWay}" TextWrapping="Wrap" Margin="10,10,0,0" Style="{StaticResource PhoneTextExtraLargeStyle}" FontSize="{StaticResource PhoneFontSizeLarge}" IsHitTestVisible="True" />
-                    <StackPanel Orientation="Horizontal" IsHitTestVisible="True">
-                        <TextBlock Text="{Binding Members, StringFormat='\{0}人 ', Mode=OneWay}" TextWrapping="Wrap" Margin="10,10,0,0" Style="{StaticResource PhoneTextSubtleStyle}" FontSize="{StaticResource PhoneFontSizeNormal}" IsHitTestVisible="True" />
-                        <TextBlock Text="{Binding Bio, Mode=OneWay}" TextWrapping="Wrap" Margin="10,10,0,0" Style="{StaticResource PhoneTextSubtleStyle}" FontSize="{StaticResource PhoneFontSizeNormal}" IsHitTestVisible="True" />
+                <Image Name="OrgzImage" Source="{Binding DisplayAvatar, Converter={StaticResource StringToImageSource}, Mode=OneWay}" Width="90" Height="90" Margin="9,0,0,0" Stretch="UniformToFill" />
+                <StackPanel Width="311" Margin="8,-2,0,0" >
+                    <TextBlock Text="{Binding Name, Mode=OneWay}" TextWrapping="Wrap" Margin="10,10,0,0" Style="{StaticResource PhoneTextExtraLargeStyle}" FontSize="{StaticResource PhoneFontSizeLarge}"  />
+                    <StackPanel Orientation="Horizontal" >
+                        <TextBlock Text="{Binding Members, StringFormat='\{0}人 ', Mode=OneWay}" TextWrapping="Wrap" Margin="10,10,0,0" Style="{StaticResource PhoneTextSubtleStyle}" FontSize="{StaticResource PhoneFontSizeNormal}"  />
+                        <TextBlock Text="{Binding Bio, Mode=OneWay}" TextWrapping="Wrap" Margin="10,10,0,0" Style="{StaticResource PhoneTextSubtleStyle}" FontSize="{StaticResource PhoneFontSizeNormal}"  />
                     </StackPanel>
                 </StackPanel>
             </StackPanel>
@@ -51,7 +57,7 @@
         <!--会话列表控件模版-->
         <DataTemplate x:Key="CovListTemplate">
             <StackPanel Orientation="Horizontal" Margin="12,2,0,4" Height="105" Background="#FF51697A">
-                <Image Name="CovImage" Tag="{Binding OriginatorId, Mode=OneWay}" Source="{Binding DisplayAvatar, Converter={StaticResource StringToImageSource}, Mode=OneWay}" Width="90" Height="90" Margin="9,0,0,0" Tap="UserImage_Tap" Stretch="UniformToFill" />
+                <Image Name="CovImage" Source="{Binding DisplayAvatar, Converter={StaticResource StringToImageSource}, Mode=OneWay}" Width="90" Height="90" Margin="9,0,0,0" Stretch="UniformToFill" />
                 <StackPanel Width="311" Margin="8,-2,0,0">
                     <TextBlock Name="ParticipantsNameTextBlock" Text="{Binding ParticipantsName, Mode=OneWay}" Margin="10,8,80,0" TextWrapping="NoWrap" Style="{StaticResource PhoneTextExtraLargeStyle}" FontSize="{StaticResource PhoneFontSizeLarge}" TextTrimming="WordEllipsis" />
                     <StackPanel Orientation="Vertical">
@@ -62,14 +68,49 @@
             </StackPanel>
         </DataTemplate>
 
+        <!--优信页面任务栏-->
+        <shell:ApplicationBar x:Key="RptAppBar" Opacity="0.7">
+            <shell:ApplicationBar.MenuItems>
+                <shell:ApplicationBarMenuItem IsEnabled="True" Text="评价此应用" Click="LikeMenu_Click"/>
+                <shell:ApplicationBarMenuItem IsEnabled="True" Text="关于" Click="AboutMenu_Click"/>
+                <shell:ApplicationBarMenuItem IsEnabled="True" Text="设置" Click="SettingMenu_Click"/>
+            </shell:ApplicationBar.MenuItems>
+            <shell:ApplicationBarIconButton IconUri="/Assets/AppBar/refresh.png" IsEnabled="True" Text="刷新" Click="RenewButton_Click"/>
+            <shell:ApplicationBarIconButton IconUri="/Assets/AppBar/share.png" IsEnabled="True" Text="通知中心" Click="ToastButton_Click"/>
+            <shell:ApplicationBarIconButton IconUri="/Images/appbar.add.rest.png" IsEnabled="True" Text="新优信" Click="NewPostButton_Click"/>
+        </shell:ApplicationBar>
+
+        <!--组织页面任务栏-->
+        <shell:ApplicationBar x:Key="OrgzAppBar" Opacity="0.7">
+            <shell:ApplicationBar.MenuItems>
+                <shell:ApplicationBarMenuItem IsEnabled="True" Text="评价此应用" Click="LikeMenu_Click"/>
+                <shell:ApplicationBarMenuItem IsEnabled="True" Text="关于" Click="AboutMenu_Click"/>
+                <shell:ApplicationBarMenuItem IsEnabled="True" Text="设置" Click="SettingMenu_Click"/>
+            </shell:ApplicationBar.MenuItems>
+            <shell:ApplicationBarIconButton IconUri="/Assets/AppBar/refresh.png" IsEnabled="True" Text="刷新" Click="RenewButton_Click"/>
+            <shell:ApplicationBarIconButton IconUri="/Assets/AppBar/share.png" IsEnabled="True" Text="通知中心" Click="ToastButton_Click"/>
+        </shell:ApplicationBar>
+
+        <!--私信页面任务栏-->
+        <shell:ApplicationBar x:Key="CovAppBar" Opacity="0.7">
+            <shell:ApplicationBar.MenuItems>
+                <shell:ApplicationBarMenuItem IsEnabled="True" Text="评价此应用" Click="LikeMenu_Click"/>
+                <shell:ApplicationBarMenuItem IsEnabled="True" Text="关于" Click="AboutMenu_Click"/>
+                <shell:ApplicationBarMenuItem IsEnabled="True" Text="设置" Click="SettingMenu_Click"/>
+            </shell:ApplicationBar.MenuItems>
+            <shell:ApplicationBarIconButton IconUri="/Assets/AppBar/refresh.png" IsEnabled="True" Text="刷新" Click="RenewButton_Click"/>
+            <shell:ApplicationBarIconButton IconUri="/Assets/AppBar/share.png" IsEnabled="True" Text="通知中心" Click="ToastButton_Click"/>
+            <shell:ApplicationBarIconButton IconUri="/Images/appbar.add.rest.png" IsEnabled="True" Text="新私信" Click="NewConversationButton_Click"/>
+        </shell:ApplicationBar>
+
     </phone:PhoneApplicationPage.Resources>
 
     <phone:PhoneApplicationPage.ApplicationBar>
         <shell:ApplicationBar x:Name="AppBar" Opacity="0.7">
             <shell:ApplicationBar.MenuItems>
-                <shell:ApplicationBarMenuItem x:Name="LikeButton" IsEnabled="True" Text="评价此应用" Click="LikeButton_Click"/>
-                <shell:ApplicationBarMenuItem x:Name="AboutButton" IsEnabled="True" Text="关于" Click="AboutButton_Click"/>
-                <shell:ApplicationBarMenuItem IsEnabled="True" Text="开发选项" Click="ApplicationBarMenuItem_Click"/>
+                <shell:ApplicationBarMenuItem x:Name="LikeButton" IsEnabled="True" Text="评价此应用" Click="LikeMenu_Click"/>
+                <shell:ApplicationBarMenuItem x:Name="LikeMenu_ClickButton" IsEnabled="True" Text="关于" Click="AboutMenu_Click"/>
+                <shell:ApplicationBarMenuItem IsEnabled="True" Text="设置" Click="SettingMenu_Click"/>
             </shell:ApplicationBar.MenuItems>
             <shell:ApplicationBarIconButton x:Name="RenewButton" IconUri="/Assets/AppBar/refresh.png" IsEnabled="True" Text="刷新" Click="RenewButton_Click"/>
             <shell:ApplicationBarIconButton x:Name="ToastButton" IconUri="/Assets/AppBar/share.png" IsEnabled="True" Text="通知中心" Click="ToastButton_Click"/>
@@ -112,7 +153,7 @@
             <!--Panorama 项目一-->
             <phone:PanoramaItem x:Name="ReceiptsPanoramaItem" Header="优信" Orientation="Vertical">
                 <!--具有文字环绕的单行列表-->
-                <phone:LongListSelector x:Name="UmsgList" ItemTemplate="{StaticResource UmsgListTemplate}" ItemsSource="{Binding AllReceiptsItems, Mode=OneWay}" Margin="0,-38,-22,2" />
+                <phone:LongListSelector x:Name="RptList" ItemTemplate="{StaticResource UmsgListTemplate}" ItemsSource="{Binding AllReceiptsItems, Mode=OneWay}" Margin="0,-38,-22,2" />
             </phone:PanoramaItem>
 
             <!--Panorama 项目二-->
@@ -124,7 +165,7 @@
             <!--Panorama 项目三-->
             <phone:PanoramaItem x:Name="ConversationsPanoramaItem" Header="私信" Orientation="Vertical">
                 <!--具有大型图像占位符的双倍宽度的全景-->
-                <phone:LongListSelector x:Name="ConversationsList" ItemTemplate="{StaticResource CovListTemplate}" ItemsSource="{Binding AllConversationsItems, Mode=OneWay}" Margin="0,-38,-10,2" />
+                <phone:LongListSelector x:Name="CovList" ItemTemplate="{StaticResource CovListTemplate}" ItemsSource="{Binding AllConversationsItems, Mode=OneWay}" Margin="0,-38,-10,2" />
             </phone:PanoramaItem>
 
             <!--Panorama 项目四-->
