--- a/Combee/SampleData/MainViewModelSampleData.xaml
+++ b/Combee/SampleData/MainViewModelSampleData.xaml
@@ -4,13 +4,12 @@
     xmlns:vm="clr-namespace:Combee.ViewModels"
     SampleProperty="示例文本属性值">
 
-    <vm:MainViewModel.Items>
-        <vm:ItemViewModel LineOne="设计一" LineTwo="Maecenas praesent accumsan bibendum" LineThree="Maecenas praesent accumsan bibendum dictumst eleifend facilisi faucibus habitant inceptos interdum lobortis nascetur"/>
-        <vm:ItemViewModel LineOne="设计二" LineTwo="Dictumst eleifend facilisi faucibus" LineThree="Pharetra placerat pulvinar sagittis senectus sociosqu suscipit torquent ultrices vehicula volutpat maecenas praesent"/>
-        <vm:ItemViewModel LineOne="设计三" LineTwo="Habitant inceptos interdum lobortis" LineThree="Accumsan bibendum dictumst eleifend facilisi faucibus habitant inceptos interdum lobortis nascetur pharetra placerat"/>
-        <vm:ItemViewModel LineOne="设计四" LineTwo="Nascetur pharetra placerat pulvinar" LineThree="Pulvinar sagittis senectus sociosqu suscipit torquent ultrices vehicula volutpat maecenas praesent accumsan bibendum"/>
-        <vm:ItemViewModel LineOne="设计五" LineTwo="Sagittis senectus sociosqu suscipit" LineThree="Dictumst eleifend facilisi faucibus habitant inceptos interdum lobortis nascetur pharetra placerat pulvinar sagittis"/>
-        <vm:ItemViewModel LineOne="设计六" LineTwo="Torquent ultrices vehicula volutpat" LineThree="Senectus sociosqu suscipit torquent ultrices vehicula volutpat maecenas praesent accumsan bibendum dictumst eleifend"/>
-    </vm:MainViewModel.Items>
-
+    <vm:MainViewModel.AllReceiptsItems>
+        <vm:ItemViewModel Title="设计一" AuthorName="Maecenas praesent accumsan bibendum" Body="Maecenas praesent accumsan bibendum dictumst eleifend facilisi faucibus habitant inceptos interdum lobortis nascetur"/>
+        <vm:ItemViewModel Title="设计二" AuthorName="Dictumst eleifend facilisi faucibus" Body="Pharetra placerat pulvinar sagittis senectus sociosqu suscipit torquent ultrices vehicula volutpat maecenas praesent"/>
+        <vm:ItemViewModel Title="设计三" AuthorName="Habitant inceptos interdum lobortis" Body="Accumsan bibendum dictumst eleifend facilisi faucibus habitant inceptos interdum lobortis nascetur pharetra placerat"/>
+        <vm:ItemViewModel Title="设计四" AuthorName="Nascetur pharetra placerat pulvinar" Body="Pulvinar sagittis senectus sociosqu suscipit torquent ultrices vehicula volutpat maecenas praesent accumsan bibendum"/>
+        <vm:ItemViewModel Title="设计五" AuthorName="Sagittis senectus sociosqu suscipit" Body="Dictumst eleifend facilisi faucibus habitant inceptos interdum lobortis nascetur pharetra placerat pulvinar sagittis"/>
+        <vm:ItemViewModel Title="设计六" AuthorName="Torquent ultrices vehicula volutpat" Body="Senectus sociosqu suscipit torquent ultrices vehicula volutpat maecenas praesent accumsan bibendum dictumst eleifend"/>
+    </vm:MainViewModel.AllReceiptsItems>
 </vm:MainViewModel>
